--- a/src/InputWrapper/CMakeLists.txt
+++ b/src/InputWrapper/CMakeLists.txt
@@ -7,5 +7,9 @@ ${MODULE_NAME}.c
 target_include_directories(${MODULE_NAME}
 PUBLIC
 ${CMAKE_CURRENT_SOURCE_DIR}
+)
+
+target_include_directories(${MODULE_NAME}
+PRIVATE
 ${CMAKE_SOURCE_DIR}/include/RTE
 )
